Actualizado nuevas updates.

--- a/updates/index.html
+++ b/updates/index.html
@@ -38,7 +38,86 @@
         <!-- Esto será de forma dinámica -->
         <div id="secondPage">
             <h2 data-translate="lastVersion">Última versión</h2>
-            <div id="latest-version-container"></div>
+            <div id="latest-version-container">
+                <div class="update">
+                <details>
+                    <summary>
+                        <span>v1.0.3alpha</span>
+                        <i class="fa-solid fa-plus"></i>
+                    </summary>
+                    <p><b>Comentario</b></p>
+                    <p>Esta es la última versión planificada por el momento, este juego fue realmente un proyecto de TFG (Trabajo de Final de Grado) y este fue su resultado final. Cabe la posibilidad de que el proyecto tenga nuevas versiones, pero por el momento queda <b>PAUSADO INDEFINIDAMENTE</b>. Muchas gracias por el testing y el feedback recibido 💓</p>
+                    <p><b>Añadido:</b></p>
+                    <li class="update-item">Nuevos entrenadores (Belén, Sergio, Izan, Seleny, Paco, Raúl y Centinela)</li>
+                    <li class="update-item">¡Nuevo mapa!</li>
+                    <li class="update-item">¡Nueva y primera Ruta! (Conecta el lugar de aparición con el nuevo pueblo)</li>
+                    <p><b>Bug fixes:</b></p>
+                    <li class="update-item">Al registrarte no recibías un Pokémon de inicio.</li>
+                    <li class="update-item">Fix que en dispositivos con una gráfica integrada o antigua no cargaba algunas texturas.</li>
+                    <li class="update-item">Fix al hacer "E" muchas veces para entrar con una puerta creaba varias instancias del mapa.</li>
+                    <p>Enlace para instalar:</p>
+                    <div class="update-item github-link">
+                        <a href="https://github.com/Maek0s/PokeSharp/releases/tag/v1.0.3-alpha" target="_blank" rel="noopener noreferrer">
+                            <img width="20" src="../multimedia/images/githubLogo.png" alt="GitHub logo"/> GitHub
+                        </a>
+                    </div>
+                    <br>
+                </details>
+                </div>
+            </div>
+            
+
+            <h2>Versiones anteriores</h2>
+            <div class="update">
+                <details>
+                    <summary>
+                        <span>v1.0.2alpha</span>
+                        <i class="fa-solid fa-plus"></i>
+                    </summary>
+                    <p><b>Añadido:</b></p>
+                    <li class="update-item">(No influye a la jugabilidad) Optimización en la estructura del proyecto.</li>
+                    <li class="update-item">Sistema de experiencia con subida de niveles.</li>
+                    <li class="update-item">Si tu Pokémon no tiene movimientos te los genera y los guarda</li>
+                    <li class="update-item">Evolución de pokémon junto a una notificación adjuntada al jugador para avisar de la evolución.</li>
+                    <li class="update-item">Sistema de combate contra entrenadores</li>
+                    <li class="update-item">2 entrenadores disponibles</li>
+                    <li class="update-item">Modo infinito activado, si van subiendo de nivel tus pokémon los enemigos también serán más fuertes</li>
+                    <p>Enlace para instalar:</p>
+                    <div class="update-item github-link">
+                        <a href="https://github.com/Maek0s/PokeSharp/releases/tag/v1.0.2-alpha" target="_blank" rel="noopener noreferrer">
+                            <img width="20" src="../multimedia/images/githubLogo.png" alt="GitHub logo"/> GitHub
+                        </a>
+                    </div>
+                    <br>
+                </details>
+            </div>
+            <div class="update">
+                <details>
+                    <summary>
+                        <span>v1.0.1alpha</span>
+                        <i class="fa-solid fa-plus"></i>
+                    </summary>
+                    <p><b>Añadido:</b></p>
+                    <li class="update-item">Ahora puedes viajar entre cajas cuando sobrepases la primera caja de Pokémon.</li>
+                    <li class="update-item">Los Pokémon salvajes ya salen con movimientos</li>
+                    <li class="update-item">En el apartado de "Fight" ya salen los movimientos del Pokémon con su color según el tipo del movimiento.</li>
+                    <li class="update-item">Ataques funcionales. (Con formula de daño pendiente a cambios)</li>
+                    <li class="update-item">¡Ahora puedes atacar a los pokemon que encuentres en las hierbas!</li>
+                    <li class="update-item">NPCs con los que conversar</li>
+                    <p><b>Bug fixes:</b></p>
+                    <li class="update-item">Pokeball flotando cuando le das a "No" lanzar pokeball.</li>
+                    <li class="update-item">MrMime daba error cuando aparecía.</li>
+                    <li class="update-item">Floatzel daba error cuando aparecía.</li>
+                    <li class="update-item">Bugs relacionados al intentar añadir Pokémon habiendo salido anteriormente de la pantalla seleccionando uno antes.</li>
+                    <p>Enlace para instalar:</p>
+                    <div class="update-item github-link">
+                        <a href="https://github.com/Maek0s/PokeSharp/releases/tag/v1.0.1-alpha" target="_blank" rel="noopener noreferrer">
+                            <img width="20" src="../multimedia/images/githubLogo.png" alt="GitHub logo"/> GitHub
+                        </a>
+                    </div>
+                    <br>
+                </details>
+            </div>
             <div class="update">
                 <details>
                     <summary>
@@ -61,8 +140,6 @@
                     <br>
                 </details>
             </div>
-
-            <h2>Versiones anteriores</h2>
 <!--            <div class="update">
                 <details>
                     <summary>
