Fix last version

--- a/updates/index.html
+++ b/updates/index.html
@@ -35,7 +35,7 @@
             <h1 data-translate="updatesTitle">Actualizaciones</h1>
         </div>
 
-        <!-- Esto será de forma dinámica -->
+        <!-- Esto será de forma dinámica en un futuro -->
         <div id="secondPage">
             <h2 data-translate="lastVersion">Última versión</h2>
             <div id="latest-version-container">
