Traducciones FAQ fixed

--- a/faq/index.html
+++ b/faq/index.html
@@ -100,7 +100,7 @@
         </footer>
 
         <!-- Scripts -->
-       <!-- <script src="../scripts/scriptTraducciones.js" defer></script>-->
+        <script src="../scripts/scriptTraducciones.js" defer></script>
     </body>
 
 </html>
