--- a/faq/index.html
+++ b/faq/index.html
@@ -74,7 +74,7 @@
                 <div id="redesSocialesFooter">
                     <a href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
                     <a href="https://x.com" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://youtube.es" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/@PokeSharpOfficial" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
         </footer>
