--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
                 <p data-translate="queEsP2">Historia, pokémons únicos y NPCs nuevos. ¿A qué esperas?</p>
                 <p><i>(Este vídeo es de prueba)</i></p>
                 <div class="video">
-                    <!-- AQUI TIENE QUE IR EL TRAILER DEL JUEGO, EL VIDEO QUE SE MUESTRA ES DE PRUEBA -->
-                    <iframe width="650" height="315" src="https://www.youtube.com/embed/UlSvYxlFUqU?si=jMBAI5pb2cuKcgvv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-                    encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                     <iframe width="650" height="315" src="https://www.youtube.com/embed/LZd9GLmvvVg?si=XPNfg8YXLwLH9N3j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="content-section">
                     <div class="content-text">
